--- a/task2/config/themes/dark.qss
+++ b/task2/config/themes/dark.qss
@@ -1,14 +1,33 @@
 QWidget {
-
+    background-color: #0d0d0d; 
+    color: #f2f2f2;            
+    font-size: 14px;
 }
 
-#comboBank {
-    font-size: 14px; 
-    border: 2px solid white; 
-    border-radius: 5px; 
+QPushButton {
+    border: 2px solid #444444;
+    border-radius: 6px;
+    padding: 6px;
+    background-color: #1a1a1a; 
+    color: #f2f2f2;
+}
+
+QPushButton:hover {
+    background-color: #2c2c2c; 
+}
+
+QComboBox {
+    border: 2px solid #444444;
+    border-radius: 6px;
     padding: 5px;
+    background-color: #1a1a1a;
+    color: #f2f2f2;
 }
 
 QDateEdit {
-    
+    border: 2px solid #444444;
+    border-radius: 6px;
+    padding: 5px;
+    background-color: #1a1a1a;
+    color: #f2f2f2;
 }
