--- a/task2/config/themes/light.qss
+++ b/task2/config/themes/light.qss
@@ -1,12 +1,11 @@
 QWidget {
-    background-color: #f5f5f5; 
+    background-color:#e0e0e0; 
     color: #222222;             
     font-size: 14px;
 }
 
 QPushButton {
-    
-    border: 2px solid #dddddd;
+    border: 2px solid #bebebe;
     border-radius: 5px;
     padding: 6px;
     background-color: #e0e0e0;  
